--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "emailjs-com": "^2.6.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "6",
-    "react-scripts": "^4.0.2",
-    "smooth-scroll": "^16.1.3",
+    "emailjs-com": "2.6.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "6.4.0",
+    "react-scripts": "4.0.3",
+    "smooth-scroll": "16.1.3",
     "typescript": "^3.2.1 || ^4"
   },
   "scripts": {
